--- a/signin.html
+++ b/signin.html
@@ -20,6 +20,15 @@
           <a href="/signup"><p>Not a user?</p></a>
         </form>
       </legend>
+      <legend>
+        Sign Up
+        <form>
+          <input type="text" name="name" value="name" />
+          <input type="text" name="username" value="username" />
+          <input type="text" name="password" value="password" />
+          <button>Sign Up</button>
+        </form>
+      </legend>
     </main>
   </body>
 </html>
