signup/signin html done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
   <header>
     <nav>
-      <a href="#">Top Tweets</a>
+      <a href="./index.html">Top Tweets</a>
+      <a href="./signup.html">SignUp/In</a>
       <a href="#"><img class="profile-image" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Thinking_Face_Emoji_large.png?v=1480481060" /></a>
     </nav>
   </header>
