--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <header>
     <nav>
-      <a href="./index.html">Top Tweets</a>
+      <a href="./top-tweets.html">Top Tweets</a>
       <a href="./signup.html">SignUp/In</a>
-      <a href="#"><img class="profile-image" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Thinking_Face_Emoji_large.png?v=1480481060" /></a>
+      <a href="index.html"><img class="profile-image" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Thinking_Face_Emoji_large.png?v=1480481060" /></a>
     </nav>
   </header>
   <main>
@@ -25,7 +25,7 @@
 
     <section id="latest-tweets">
       <h2>Latest Tweets:</h2>
-      <ul id="tweets-list">
+      <ul class="tweets-list">
         <li><a href="#">
           <img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Thinking_Face_Emoji_large.png?v=1480481060" />
           <p>Tweet 1</p>
