can render hi in browser

--- a/landing.html
+++ b/landing.html
@@ -20,6 +20,7 @@
   <section>
     <figure>
       <img src="https://pbs.twimg.com/media/C8QsNInXUAAyjZQ.jpg" alt="user avatar" />
+      <h3>T_on_A</h3>
     </figure>
   </section>
   <section>
@@ -37,7 +38,27 @@
   </section>
   <aside>
     <ul>
-      <li>Most popular hashtags</li>
+      <section>
+        <figure>
+          <img src="https://pbs.twimg.com/media/C8QsNInXUAAyjZQ.jpg" alt="user avatar" />
+        </figure>
+        <h3>Jill Hill</h3>
+        <p>Todays lab sucks</p>
+      </section>
+      <section>
+        <figure>
+          <img src="https://pbs.twimg.com/media/C8QsNInXUAAyjZQ.jpg" alt="user avatar" />
+        </figure>
+        <h3>Jack Hill</h3>
+        <p>Todays lab is AMAZING</p>
+      </section>
+      <section>
+        <figure>
+          <img src="https://pbs.twimg.com/media/C8QsNInXUAAyjZQ.jpg" alt="user avatar" />
+        </figure>
+        <h3>Hilly Jill</h3>
+        <p>Todays lab is all uphill</p>
+      </section>
     </ul>
   </aside>
 </body>
