--- a/semanticMarkup/home.html
+++ b/semanticMarkup/home.html
@@ -44,7 +44,7 @@
           <header>
             <img
               style="width: 100px; height: 100px;"
-              src="https://cdn.pixabay.com/photo/2017/06/13/12/53/profile-2398782_960_720.png"
+              src="http://cdn.onlinewebfonts.com/svg/img_191958.png"
             />
             <h2>Name <span>handle</span></h2>
           </header>
@@ -68,7 +68,7 @@
           <header>
             <img
               style="width: 100px; height: 100px;"
-              src="https://cdn.pixabay.com/photo/2017/06/13/12/53/profile-2398782_960_720.png"
+              src="http://cdn.onlinewebfonts.com/svg/img_191958.png"
             />
             <h2>Name <span>handle</span></h2>
           </header>
