--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Say What</title>
+  <title>Tweeter</title>
 </head>
 <body>
   <header>
@@ -36,7 +36,7 @@
       <img alt="placeholder" src="https://via.placeholder.com/150">
     </section>
   </main>
-  
+
   <footer>
     <nav>
       <ul>
