added linting files

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>TWITTER</title>
 </head>
+<header>
+  <hgroup>
+    <h1>TWITTER</h1>
+    <h2>my info</h2>
+  </hgroup>
+</header>
 <body>
-  
+  <main>
+    <img src="">
+  </main>
 </body>
+<footer>
+      <h1>TM tweeeeeets</h1>
+  </footer>
 </html>
