changed file structure

--- a/src/home.html
+++ b/src/home.html
@@ -6,18 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>TWITTER</title>
 </head>
-<header>
-  <hgroup>
-    <h1>TWITTER</h1>
-    <h2>my info</h2>
-  </hgroup>
-</header>
 <body>
+  <header>
+    <hgroup>
+      <h1>TWITTER</h1>
+      <h2>my info</h2>
+    </hgroup>
+  </header>
+
   <main>
-    <img src="">
+    <img src="./img/bird.png">
   </main>
-</body>
-<footer>
-      <h1>TM tweeeeeets</h1>
+
+  <footer>
+        <h1>TM tweeeeeets 2019</h1>
   </footer>
+</body>
 </html>
