styles for signin-signup

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
     />
     <title>Twitter Clone</title>
   </head>
-
   <body>
-    <div id="root"></div>
+    <div
+      style="background-color: #317043; height: 100vh; padding: 1px;"
+      id="root"
+    ></div>
   </body>
 </html>
