Added login, addPost & postDetail seamntic HTMLs

--- a/semanticHTML/posts.html
+++ b/semanticHTML/posts.html
@@ -15,7 +15,7 @@
     </nav>
   </header>
   <section>
-    <h1>Latest Posts</h1>
+    <h1>List of Posts</h1>
     <ul>
       <li>Post#1 Title</li>
       <li>Post#2 Title</li>
