--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,6 @@
     <title>Twitter Clone</title>
   </head>
   <body>
-    <div
-      style="background-color: #317043; height: 100vh; padding: 1px;"
-      id="root"
-    ></div>
+    <div style="height: 100vh; padding-top: 1px;" id="root"></div>
   </body>
 </html>
