more style updates

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,11 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
     />
-    <title>Twitter Clone</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Dosis|Prompt"
+      rel="stylesheet"
+    />
+    <title>Chirp - A Twitter Clone</title>
   </head>
   <body>
     <div style="height: 100vh; padding-top: 1px;" id="root"></div>
