--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
     <title>Chirp - A Twitter Clone</title>
   </head>
   <body>
-    <div style="height: 100vh; padding-top: 1px;" id="root"></div>
+    <div
+      style="background-color: #c16834; height: 100vh; padding-top: 1px;"
+      id="root"
+    ></div>
   </body>
 </html>
