--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <title>CHIRP </title>
+  <style>
+    body, html {
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
   <div id="root"></div>
 
 </body>
 </html>
+
+
