added more styling for mobile only, still deciding on typography

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,14 @@
   <title>React Twitter Clone</title>
 </head>
 
-<body>
-  <div id="root"></div>
+<body style='
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;'>
+  <div id="root" style='display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: space-between;'></div>
 </body>
 
 </html>
