style updates to nav and uls

--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,7 @@
     />
     <title>Chirp - A Twitter Clone</title>
   </head>
-  <body>
-    <div
-      style="background-color: #c16834; height: 100vh; padding-top: 1px;"
-      id="root"
-    ></div>
+  <body style="height: 100vh;">
+    <div style="background-color: #c16834; padding-top: 1px;" id="root"></div>
   </body>
 </html>
