fixed scroll problem and updated snaps

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   </head>
   <body style="height: 100vh;">
     <div
-      style="background-color: #c16834; padding-top: 1px; height: 100%;"
+      style="background-color: #c16834; padding-top: 1px; height: 100%; overflow: scroll"
       id="root"
     ></div>
   </body>
