Added React components

--- a/semanticHTML/home.html
+++ b/semanticHTML/home.html
@@ -10,6 +10,7 @@
   <header>
     <p>My Blog</p>
     <nav>
+      <a href="home.html">Home</a>
       <a href="login.html">Login</a>
       <a href="posts.html">Posts</a>
       <a href="about.html">About</a>
