--- a/semanticHTML/addPost.html
+++ b/semanticHTML/addPost.html
@@ -19,7 +19,7 @@
         <h3>Add New Post</h3>
         <form>
             <label for="title">Post Title</label>
-            <input type="text" name="title" id="title" size="30" placeholder="post title" required>
+            <input type="text" name="title" id="title" size="30" placeholder="post title" required/>
             <label for="post">Enter new post here</label>
             <textarea  name="post" id="post" rows="10" cols="40">Another awesome content here...</textarea> 
             <button>Add</button>
