--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,8 @@
   <main>
     <img href="./img/bird.png">
   </main>
-
+//
+<h1 id="logo"><a href="#"><img src="site/logo.png" alt="The Baker Street Inquirer" /></a></h1>
   <footer>
         <h1>TM tweeeeeets 2019</h1>
   </footer>
