--- a/src/loading.html
+++ b/src/loading.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main>
-    <h1>Tweets Are Loading</h1>
+    <h1>Tweets Are Loading...</h1>
     <img src="./img/bird.png">
   </main>
 </body>
