accessibility things done

--- a/non-react-way/signup.html
+++ b/non-react-way/signup.html
@@ -12,7 +12,7 @@
     <nav>
       <a href="./top-tweets.html">Top Tweets</a>
       <a href="./signup.html">SignUp/In</a>
-      <a href="index.html"><img class="profile-image" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Thinking_Face_Emoji_large.png?v=1480481060" /></a>
+      <a href="index.html"><img alt="profile pic" class="profile-image" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Thinking_Face_Emoji_large.png?v=1480481060" /></a>
     </nav>
   </header>
   <main>
