--- a/non-react-way/index.html
+++ b/non-react-way/index.html
@@ -12,7 +12,7 @@
     <nav>
       <a href="./top-tweets.html">Top Tweets</a>
       <a href="./signup.html">SignUp/In</a>
-      <a href="index.html"><img class="profile-image" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Thinking_Face_Emoji_large.png?v=1480481060" /></a>
+      <a href="index.html"><img alt="profile pic" class="profile-image" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Thinking_Face_Emoji_large.png?v=1480481060" /></a>
     </nav>
   </header>
   <main>
@@ -27,15 +27,15 @@
       <h2>Latest Tweets:</h2>
       <ul class="tweets-list">
         <li><a href="#">
-          <img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Thinking_Face_Emoji_large.png?v=1480481060" />
+          <img alt="profile pic" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Thinking_Face_Emoji_large.png?v=1480481060" />
           <p>Tweet 1</p>
         </li></a>  
         <li><a href="#">
-            <img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Thinking_Face_Emoji_large.png?v=1480481060" />
+            <img alt="profile pic" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Thinking_Face_Emoji_large.png?v=1480481060" />
             <p>Tweet 2</p>
         </li></a>
         <li><a href="#">
-            <img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Thinking_Face_Emoji_large.png?v=1480481060" />
+            <img alt="profile pic" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Thinking_Face_Emoji_large.png?v=1480481060" />
             <p>Tweet 3</p>
         </li></a>
       </ul>
